<resources>
    <string name="app_name" translatable="false">Byke</string>
    <string name="sign_up">Sign Up</string>
    <string name="user_name">Username</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="birthday">Date of birth</string>
    <string name="password">Password</string>
    <string name="input_username_hint">Enter your Username</string>
    <string name="input_lastname_hint">Enter your Last Name</string>
    <string name="input_firstname_hint">Enter your First Name</string>
    <string name="input_birthday_hint">Enter your Birthdate</string>
    <string name="login">Login</string>
    <string name="input_password_hint">Enter your password</string>
    <string name="no_account_sign_up">No account? Sign Up!</string>
    <string name="account_log_in">Already have an account? Sign in!</string>
    <string name="username_missing">Please enter a username</string>
    <string name="password_missing">Please enter a password</string>
    <string name="login_fail">Username or password is incorrect</string>
    <string name="signing_up">Sign up</string>
    <string name="username_already_taken">Username already taken</string>
    <string name="login_fail_try_again">Log in failed, please try again</string>
    <string name="sign_up_fail_try_again">Sign up failed, please try again</string>
    <string name="ok" translatable="false">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="connection_failed">Connection failed. Continue?</string>
    <string name="connect">Connection…</string>
    <string name="read_qr_code">Read QR Code</string>
    <string name="scan_ble">Start scanning devices</string>
    <string name="no_code_found">No QrCode found. Please scan the QRCode on your device</string>
    <string name="no_qr_code_found">"No QR code found. Please take a clearer picture"</string>
    <string name="ble_scan_start">Scanning… If it takes too long please reactivate BLE on the device</string>
    <string name="log_out">Log out</string>
    <string name="invalid_date">Please enter a valid date</string>
    <string name="invalid_birthdate">Invalid birth date</string>
    <string name="no_rides">No rides yet</string>
    <string name="about_me">About me</string>
    <string name="last_rides">Last 5 rides</string>
    <string name="created_by">"Created by: "</string>
    <string name="created_by_fem">"Created by: "</string>
    <string name="date">"Date: "</string>
    <string name="duration">"Duration: "</string>
    <string name="length">"Distance: "</string>
    <string name="most_used_paths">Most used paths</string>
    <string name="home">Home</string>
    <string name="map">Map</string>
    <string name="connection">Connection</string>
    <string name="my_account">My account</string>
    <string name="new_step">New Step</string>
    <string name="device_found">Device found</string>
    <string name="device_connected">Device connected</string>
    <string name="device_registered">A device was registered:</string>
    <string name="read_qr_warn">Warning: If you read the QR code, your last device will be erased from memory</string>
</resources>