<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.bykeandroid.view.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/info_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30sp"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/information"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_me"
                android:textAlignment="center"
                android:textSize="20sp"/>

            <TableLayout
                android:id="@+id/info_table"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="*"
                android:layout_weight="1">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/lb_firstname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/first_name"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/info_firstname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:stretchColumns="*">

                    <TextView
                        android:id="@+id/lb_lastname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/last_name"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/info_lastname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:stretchColumns="*">

                    <TextView
                        android:id="@+id/lb_birthdate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/birthday"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/info_birthdate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </TableRow>
            </TableLayout>

            <TextView
                android:id="@+id/information2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/last_rides"
                android:textAlignment="center"
                android:textSize="20sp" />
            <TextView
                android:id="@+id/rides_table"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:visibility="gone"
                android:layout_weight="2"
                />
            <ScrollView
                android:id="@+id/scroll_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_marginHorizontal="10sp"
                >

                <ListView
                    android:id="@+id/rides_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:divider="#000"
                    android:dividerHeight="5sp"
                    android:footerDividersEnabled="true"
                    android:headerDividersEnabled="true" />

            </ScrollView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:layout_gravity="center">


                <Button
                    android:id="@+id/logout_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|center"
                    android:text="@string/log_out"
                    app:backgroundTint="@color/red" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</layout>